feat(inferencer): config, enterance point, model
- Added a config file `config.toml` with api url and local models
  directory
- Added more dependencies to run inference
- Added one model `random_forest` to test model loading
- Adjusted the components to read the config and fixed bugs after
  testing

future works:
- adjust the data shape which is going into the model prediction
- check if creating a temp file to read the csv is necessary
- check if the prediction output is correct and needs formatting

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,4 @@ build-backend = "setuptools.build_meta"
 name = "my-fastapi-app"
 version = "0.1.0"
 description = "A simple FastAPI application"
+readme="README.md"
