--- a/.gitignore
+++ b/.gitignore
@@ -173,4 +173,15 @@ cython_debug/
 # PyPI configuration file
 .pypirc
 
+
+# jan personal
 trash/
+*.zip
+
+
+# Test & coverage reports
+htmlcov/
+.coverage
+coverage.xml
+junit/
+test-results.xml
