--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,8 +34,8 @@ jobs:
         pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
         
     - name: Upload test results
-      uses: actions/upload-artifact@v3
-      if: always()  # Upload even if tests fail
+      uses: actions/upload-artifact@v4  # Updated to v4
+      if: always()
       with:
         name: pytest-results
         path: |
