--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,8 +30,8 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest pytest-cov
-        mkdir -p junit htmlcov
-        pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html
+        mkdir -p junit htmlcov coverage
+        pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html --cov-report=lcov:coverage/lcov.info
         
     - name: Upload test results
       uses: actions/upload-artifact@v4  # Updated to v4
