feat(logging): update logging, fix bugs, make more robust
- added logging_setup for `rich` support and saving the logs to the storage,
- removed some dead code,
- updated Dockerfile to pass the ENV variable for production
  environment,
- updated the `/evaluate/` endpoint to get the storage_api_url

--- a/config.toml
+++ b/config.toml
@@ -12,3 +12,5 @@ default_model_type = "RandomForest"
 default_prediction_types = ["ripeness_state", "firmness"]
 default_balance_type = "balanced"
 
+[parser]
+row_limit = 30
