--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         pip install pytest pytest-cov
         mkdir -p junit htmlcov coverage
-        pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html --cov-report=lcov:coverage/lcov.info
+        pytest tests/ --doctest-modules --junitxml=junit/test-results.xml --cov=src --cov-report=xml --cov-report=html --cov-report=lcov:coverage/lcov.info --cov-config=.coveragerc
         
     - name: Upload test results
       uses: actions/upload-artifact@v4  # Updated to v4
