--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,73 @@
-fastapi
-fastapi-cli
-httpx
-rich
-uvicorn
-python-multipart
-joblib
-numpy
-pandas
-toml
-scikit-learn
-imblearn
-lightgbm
-
-# cluster
-dask
-distributed
-
-# test
-pytest
-pytest-cov
-pytest-asyncio
+annotated-types==0.7.0
+anyio==4.9.0
+certifi==2025.4.26
+click==8.1.8
+cloudpickle==3.1.1
+coverage==7.8.1
+dask==2025.5.1
+distributed==2025.5.1
+exceptiongroup==1.3.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+fsspec==2025.5.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
+importlib_metadata==8.7.0
+iniconfig==2.1.0
+Jinja2==3.1.6
+joblib==1.5.0
+lightgbm==4.6.0
+locket==1.0.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+msgpack==1.1.0
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+partd==1.4.2
+pluggy==1.6.0
+psutil==7.0.0
+pydantic==2.11.4
+pydantic_core==2.33.2
+Pygments==2.19.1
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-cov==6.1.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+rich==14.0.0
+rich-toolkit==0.14.6
+scikit-learn==1.6.1
+scipy==1.15.3
+shellingham==1.5.4
+six==1.17.0
+sklearn-compat==0.1.3
+sniffio==1.3.1
+sortedcontainers==2.4.0
+starlette==0.46.2
+tblib==3.1.0
+threadpoolctl==3.6.0
+toml==0.10.2
+tomli==2.2.1
+toolz==1.0.0
+tornado==6.5
+typer==0.15.4
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+zict==3.0.0
+zipp==3.21.0
